Refactor SimplePromptService class
The refactoring of SimplePromptService class includes changes to dependencies and method improvement. The OpenAIAsyncClientService class has been replaced with OpenAIAsyncClient and the code for the getChatCompletions method has been rewritten in a more readable and concise form.